2006-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs: s/EACCESS/EACCES/g.  I can't read.

2006-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* StdioFileStream.cs, UnixDirectoryInfo.cs, UnixEnvironment.cs, 
	  UnixFileInfo.cs, UnixFileSystemInfo.cs, UnixGroupInfo.cs,
	  UnixIOException.cs, UnixMarshal.cs, UnixProcess.cs, UnixStream.cs,
	  UnixSymbolicLinkInfo.cs, UnixUserInfo.cs: Remove Obsolete API.
	* CdeclFunction.cs, IncludeAttribute.cs, Stdlib.cs, Syscall.cs,
	  UnixConvert.cs, UnixDirectory.cs, UnixFile.cs, UnixGroup.cs, 
	  UnixUser.cs: Delete.
	* UnixPath.cs: Remove InvalidPathChars; use GetInvalidPathChars() instead.
	* FileTypes.cs: Remove Obsolete API

2006-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* FileAccessPermissions.cs: Remove UserMask, GroupMask, OtherMask values.
	* FileSpecialAttributes.cs: Remove AllAttributes member; it shouldn't be
	  public.  Use UnixFileSystemInfo.AllSpecialAttributes instead.
	* StdioFileStream.cs: Open files in binary mode, not text;
	  Fix exception message for StdioFileStream(path, mode) mode param check.
	* UnixDirectoryInfo.cs: Add Create(FileAccessPermissions) overload; change
	  GetFileSystemEntries() to include the directory name that the files came
	  from (otherwise they're in the current working direcetory, which they
	  probably aren't).
	* UnixFileInfo.cs: Add Create(FileAccessPermissions) overload; Add better
	  argument checking to several Open() overloads.
	* UnixFileSystemInfo.cs: Add AllSpecialAttributes, AllFileTypes members;
	  FullPath member should invalidate instance if path changes; Change return
	  type of GetFileStatus for maintenance/better documentation; ToStat()
	  should ensure that the instance is valid first.
	* UnixMarshal.cs: Add additional Errno values to CreateExceptionForError();
	  reformat CreateExceptionForError for maintenance.
	* UnixPath.cs: Obsolete InvalidPathChars -- FxCop never liked it, and now I
	  know why it didn't like it (thank you Framework Design Guidelines!).